--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 - Use <!DOCTYPE html>.
 - Make everything SSL-ready.
 - Use height and width in <img>-tags.
+- Better use some salty nice hashes for the passwords instead of the old-fashioned md5.
